fix: z-index for banner

--- a/src/assets/scss/_rendering.scss
+++ b/src/assets/scss/_rendering.scss
@@ -13,6 +13,7 @@
   }
   .banner {
     background: #202020;
+    z-index: -1;
     h1 {
       font-size:     4.5rem;
       margin-bottom: 6.25rem;
